# LFS-Queue

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  pyproject.toml  queue_cli.py  queue_controller.py  queue_core.py  queue_live_verify.py  queue_mcp.py  settings.json
docs/: 00-product-requirements.md  01-local-dev.md  02-shipping.md  03-marketplace.md
panels/: __init__.py  main_panel.py
scripts/: app_smoke_test.py  gui_queue_mcp_verify.py  mcp_probe.py  queue_cli.py  queue_e2e_verify.py  queue_smoke_test.py
tasks/: todo.md
tasks/active/: 2026-04-04-panel-runtime-divergence-handoff.md  add-job-row-selection-and-editing-ui.md  current-task.md  lfs-queue-bare-bones-product-build.md
tasks/archive/: 2026-03-29-init-py-worklog.md  2026-03-29-lfs-queue-mcp-worklog.md  2026-03-29-queue-controller-py-worklog.md  2026-03-29-scripts-worklog.md  2026-04-04-queue-execution-and-preservation.md  lfs-queue-bare-bones-product-build-completed-2026-05-10.md  lfs-queue-ui-cleanup-completed-2026-05-10.md  panel-runtime-divergence-superseded-2026-05-10.md
tasks/done/archive/: 2026-03-29-queue-core-py-worklog.md  2026-03-29-queue-mcp-py-worklog.md  2026-04-04-queue-handoff-plan.md
tasks/planned/: add-queue-report-generation.md  add-to-queue-training-panel.md  next-steps.md
tests/: test_main_panel_summary_helpers.py  test_queue_cli.py  test_queue_controller_no_mcp.py  test_queue_core.py
